# neonatal_apnea_prediction

./: .gitignore  README.md  matplotlibrc  pyproject.toml
config/: neonatal_config.yaml
config/dataset/: neonatal.yaml
config/experiment/: best_three.yaml  lag_experiment.yaml  single_mod_hr.yaml  single_mod_np.yaml  single_mod_pco2.yaml  single_mod_pr.yaml  single_mod_spo2.yaml  single_mod_th.yaml  stacked_experiment.yaml
config/meta/: default.yaml
config/network/: gap.yaml  log_reg.yaml  mlp.yaml  mlp_combiner.yaml  nam.yaml  nam_sweep.yaml
config/optimizer/: LBFGS.yaml  adam_w.yaml  optimizer.yaml
notebooks/: activation_maps_figure.ipynb  logits_figure.ipynb  performance_figure.ipynb
scripts/: neonatal_script.sh
src/: misc_utils.py  models.py  modules.py  neonatal_utils.py  plotting_utils.py  train.py  train_neonatal.py  utils.py
